add yes/no/maybe buttons

--- a/src/cajoler.html
+++ b/src/cajoler.html
@@ -9,7 +9,7 @@
       margin: 1vw;
       width: 98vw;
       box-sizing: border-box;
-      padding: 5px 10px;
+      padding: 20px;
       background-color: #333;
       border: 1px solid black;
       box-shadow: 1px 2px 3px grey;
@@ -20,21 +20,30 @@
     }
 
     .cajoler .actions {
+      padding: 20px 0 0 0;
       text-align: right;
+    }
+
+    .cajoler .actions button {
+      font-size: medium;
+      padding: 5px 10px;
+      margin-left: 20px;
     }
 
   </style>
   <script type='text/javascript' src='/cajoler/dist/cajoler.esm.js'></script>
-  <script type="text/javascript">
-    setTimeout(() => console.log('hello'), 1000)
-  </script>
-
 
 </head>
 <body>
 <h1>Enlightenment is the only issue, the only guarantee of suffering. Leek can be covered with fluffy sauerkraut, also
   try
   tossing the stew with buttermilk.</h1>
+<p>
+  Spheroid machines, to the radiation dome.Fantastic crews, to the alpha quadrant.
+</p>
+<p>
+  Spheroid machines, to the radiation dome.Fantastic crews, to the alpha quadrant.
+</p>
 <p>
   Spheroid machines, to the radiation dome.Fantastic crews, to the alpha quadrant.
 </p>
